# llamancher

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
backend/: main.cpp  model_manager.cpp  model_manager.h  preset.cpp  preset.h  preset_test.cpp  server_manager.cpp  server_manager.h  settings.cpp  settings.h  settings_test.cpp
docs/: webkit-font-blur-scroll.md
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: saucer.ts  stores.svelte.ts  types.ts  utils.ts
frontend/src/lib/components/: HeaderBar.svelte  LogViewer.svelte  ModelDetail.svelte  ModelList.svelte  ModelSpeculative.svelte  ServerButton.svelte  SettingsDialog.svelte
frontend/src/lib/i18n/: en.json  index.ts  ru.json
frontend/src/lib/ui/: button.svelte  dialog.svelte  input.svelte  label.svelte  separator.svelte  slider.svelte  switch.svelte
frontend/src/lib/ui/dialog/: dialog-content.svelte  dialog-footer.svelte  dialog-overlay.svelte
frontend/src/lib/ui/input/: input.svelte
frontend/src/lib/ui/native-select/: native-select.svelte
frontend/src/lib/ui/separator/: separator.svelte
frontend/src/lib/ui/slider/: slider.svelte
frontend/src/lib/ui/sonner/: sonner.svelte
scripts/: build.sh  dev.sh
